--- a/Project-1/Project-1.vcxproj.filters
+++ b/Project-1/Project-1.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="ThreadCache.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CentralCache.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
